# OsMEN-OC

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  Makefile  README.md  pyproject.toml  tatus
.github/: copilot-instructions.md  copilot-setup-steps.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: copilot-task.yml
.github/instructions/: agent-manifests.instructions.md  config-files.instructions.md  install-audit.instructions.md  python-code.instructions.md  python-security-guidelines.instructions.md  python-test-guidelines.instructions.md  quadlet-files.instructions.md  secrets-lifecycle.instructions.md  shell-scripts.instructions.md  test-files.instructions.md  update-activity-workflow.instructions.md
.github/prompts/: osmen-file-map.prompt.md
.github/workflows/: ci.yml
.opencode/memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
agents/: boot_hardening.yaml  daily_brief.yaml  focus_guardrails.yaml  install_agent.md  knowledge_librarian.yaml  media_organization.yaml  research.yaml  resource_audit.yaml  secrets_custodian.yaml  system_monitor.yaml  taskwarrior_sync.yaml  vision_tools.yaml
config/: Caddyfile  PIPELINE_CONNECTIONS.instructions.md  agents.yaml  compute-routing.yaml  hardware.yaml  openclaw.yaml  orchestration.yaml  pipelines.yaml  prometheus.yml  restic-db-paths.txt  secrets-registry.yaml
config/secrets/: api-keys.template.yaml  gh-token.template.yaml  oauth-tokens.template.yaml
config/voice/: stt.yaml  tts.yaml
core/: Containerfile  PIPELINE_CONNECTIONS.instructions.md  __init__.py
core/approval/: __init__.py  gate.py
core/audit/: __init__.py  trail.py
core/bridge/: __init__.py  protocol.py  ws_client.py
core/events/: __init__.py  bus.py  envelope.py
core/gateway/: __init__.py  app.py  builtin_handlers.py  deps.py  handlers.py  mcp.py
core/knowledge/: __init__.py  ingest.py
core/memory/: __init__.py  chunking.py  embeddings.py  hub.py  lateral.py  maintenance.py  store.py
core/orchestration/: __init__.py  bridge_adapter.py  discussion.py  gateway.py  ledger.py  memory_bridge.py  models.py  registry.py  router.py  session.py  views.py  watchdogs.py  workflow.py
core/pipelines/: __init__.py  runner.py
core/secrets/: __init__.py  audit_checks.py  cli.py  custodian.py
core/setup/: __init__.py  __main__.py  wizard.py
core/tasks/: __init__.py  queue.py  sync.py
core/utils/: __init__.py  config.py  exceptions.py
core/vision/: __init__.py  client.py  image_gen.py
core/voice/: __init__.py  stt.py  tts.py
docs/: GITHUB_AGENT_OPERATIONS.md  INSTALL_HANDOFF_2026-04-07.md  OUTSIDE_AUDIT_REPORT.md  POST_INSTALL_RESOURCE_ORGANIZATION.md  REPO_AUDIT_2026-04-05.md  single-bot-safe-mode.md
migrations/: 001_initial_schema.sql  002_unified_memory.sql  003_orchestration.sql
openclaw/: HEARTBEAT.md  IDENTITY.md  MEMORY.md  TOOLS.md  USER.md
osmen_oc.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
quadlets/: osmen-core-chromadb.container  osmen-core-postgres.container  osmen-core-redis.container  osmen-core.network
roundtable/: AGENT-DEPARTMENTS-MANIFESTO.md  manifesto-draft1.md  manifesto-draft2.md  manifesto-draft3.md  manifesto-draft4.md
scripts/: PIPELINE_CONNECTIONS.instructions.md  _bulk_manga.py  _bulk_run.py  backup.sh  bootstrap.sh  chromadb-compact.py  deploy_quadlets.sh  deploy_timers.sh  generate_working_memory.py  ingest_handoffs.py  lemonade-autoload.sh  manga_bulk_v2.py  manga_bulk_v3.py  manga_bulk_v4.py  manga_downloader.py  manga_postprocess.py  media-sorter.py  resource_audit.sh  sync_memory_bank.py  tw-stabilization-plan.sh  verify-versions.sh
state/: manga_download_report.txt  manga_list_300.txt
tests/: conftest.py  test_agent_manifests.py  test_approval.py  test_audit.py  test_bridge.py  test_contracts.py  test_core.py  test_events.py  test_gateway.py  test_handlers.py  test_hub.py  test_ingest.py  test_memory.py  test_memory_maintenance.py  test_orchestration.py  test_pipelines.py  test_quadlets.py  test_secrets_custodian.py  test_setup.py  test_smoke.py  test_system_monitor.py  test_tasks.py  test_timers.py  test_vision.py  test_voice.py  test_ws_bridge.py
timers/: osmen-chromadb-compact.service  osmen-chromadb-compact.timer  osmen-db-backup.service  osmen-db-backup.timer  osmen-db-vacuum.service  osmen-db-vacuum.timer  osmen-health-report.service  osmen-health-report.timer  osmen-memory-maintenance.service  osmen-memory-maintenance.timer  osmen-npu-autoload.service  osmen-secrets-audit.service  osmen-secrets-audit.timer  osmen-smart-check.service  osmen-smart-check.timer  osmen-vpn-audit.service  osmen-vpn-audit.timer
vault/: README.md
(+201 files in other folders)
