[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "osmen-oc"
version = "0.1.0"
description = "OsMEN-OC execution engine — pipeline execution, tools, bridge logic, memory, Podman services, timers"
license = { text = "Apache-2.0" }
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.29,<1",
    "pydantic>=2.7,<3",
    "pyyaml>=6.0,<7",
    "loguru>=0.7,<1",
    "httpx>=0.27,<1",
    "anyio>=4.4,<5",
    "cronsim>=2.6,<3",
    "websockets>=12.0,<15",
]

[project.optional-dependencies]
runtime = [
    "redis[hiredis]>=5.0,<6",
    "asyncpg>=0.29,<1",
]
dev = [
    "pytest>=8.2,<9",
    "pytest-cov>=5.0,<6",
    "pytest-timeout>=2.3,<3",
    "anyio[trio]>=4.4,<5",
    "ruff>=0.4,<1",
    "mypy>=1.10,<2",
    "httpx>=0.27,<1",
    "types-PyYAML>=6.0,<7",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["core*"]

[project.scripts]
osmen-setup = "core.setup.__main__:main"

[project.entry-points."osmen_oc.handlers"]
# Example: my_tool = "mypkg.handlers:handle_my_tool"
# External packages add entries here to auto-register handlers at startup.

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.14"
ignore_missing_imports = true
